build/log/idf_py_stderr_output_321005
In file included from /home/yurijn/Documents/lvgl-port/components/lvgl/src/osal/lv_freertos.c:20:
/home/yurijn/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include/freertos/atomic.h:402:34: warning: 'Atomic_XOR_u32' defined but not used [-Wunused-function]
  402 | static portFORCE_INLINE uint32_t Atomic_XOR_u32( uint32_t volatile * pulDestination,
      |                                  ^~~~~~~~~~~~~~
/home/yurijn/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include/freertos/atomic.h:375:34: warning: 'Atomic_NAND_u32' defined but not used [-Wunused-function]
  375 | static portFORCE_INLINE uint32_t Atomic_NAND_u32( uint32_t volatile * pulDestination,
      |                                  ^~~~~~~~~~~~~~~
/home/yurijn/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include/freertos/atomic.h:348:34: warning: 'Atomic_AND_u32' defined but not used [-Wunused-function]
  348 | static portFORCE_INLINE uint32_t Atomic_AND_u32( uint32_t volatile * pulDestination,
      |                                  ^~~~~~~~~~~~~~
/home/yurijn/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include/freertos/atomic.h:321:34: warning: 'Atomic_OR_u32' defined but not used [-Wunused-function]
  321 | static portFORCE_INLINE uint32_t Atomic_OR_u32( uint32_t volatile * pulDestination,
      |                                  ^~~~~~~~~~~~~
/home/yurijn/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include/freertos/atomic.h:294:34: warning: 'Atomic_Decrement_u32' defined but not used [-Wunused-function]
  294 | static portFORCE_INLINE uint32_t Atomic_Decrement_u32( uint32_t volatile * pulAddend )
      |                                  ^~~~~~~~~~~~~~~~~~~~
/home/yurijn/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include/freertos/atomic.h:269:34: warning: 'Atomic_Increment_u32' defined but not used [-Wunused-function]
  269 | static portFORCE_INLINE uint32_t Atomic_Increment_u32( uint32_t volatile * pulAddend )
      |                                  ^~~~~~~~~~~~~~~~~~~~
/home/yurijn/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include/freertos/atomic.h:243:34: warning: 'Atomic_Subtract_u32' defined but not used [-Wunused-function]
  243 | static portFORCE_INLINE uint32_t Atomic_Subtract_u32( uint32_t volatile * pulAddend,
      |                                  ^~~~~~~~~~~~~~~~~~~
/home/yurijn/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include/freertos/atomic.h:215:34: warning: 'Atomic_Add_u32' defined but not used [-Wunused-function]
  215 | static portFORCE_INLINE uint32_t Atomic_Add_u32( uint32_t volatile * pulAddend,
      |                                  ^~~~~~~~~~~~~~
/home/yurijn/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include/freertos/atomic.h:182:34: warning: 'Atomic_CompareAndSwapPointers_p32' defined but not used [-Wunused-function]
  182 | static portFORCE_INLINE uint32_t Atomic_CompareAndSwapPointers_p32( void * volatile * ppvDestination,
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/yurijn/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include/freertos/atomic.h:150:32: warning: 'Atomic_SwapPointers_p32' defined but not used [-Wunused-function]
  150 | static portFORCE_INLINE void * Atomic_SwapPointers_p32( void * volatile * ppvDestination,
      |                                ^~~~~~~~~~~~~~~~~~~~~~~
/home/yurijn/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include/freertos/atomic.h:114:34: warning: 'Atomic_CompareAndSwap_u32' defined but not used [-Wunused-function]
  114 | static portFORCE_INLINE uint32_t Atomic_CompareAndSwap_u32( uint32_t volatile * pulDestination,
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/yurijn/Documents/lvgl-port/main/main.cpp: In function 'void loop(void*)':
/home/yurijn/Documents/lvgl-port/main/main.cpp:106:25: warning: unused variable 'past_operation_call_time' [-Wunused-variable]
  106 |     static TickType_t   past_operation_call_time = 0;
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~
/home/yurijn/Documents/lvgl-port/main/main.cpp: In function 'void my_flush_cb(lv_display_t*, const lv_area_t*, uint8_t*)':
/home/yurijn/Documents/lvgl-port/main/main.cpp:138:13: error: 'put_px' was not declared in this scope
  138 |             put_px(x, y, *buf16);
      |             ^~~~~~
/home/yurijn/Documents/lvgl-port/main/main.cpp: In function 'esp_err_t init()':
/home/yurijn/Documents/lvgl-port/main/main.cpp:248:29: error: 'lv_st7789_create' was not declared in this scope; did you mean 'lv_tlsf_create'?
  248 |     lv_display_t *display = lv_st7789_create();
      |                             ^~~~~~~~~~~~~~~~
      |                             lv_tlsf_create
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4790: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
